# react-native-header-search

./: CONTRIBUTING.md  HeaderSearch.podspec  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/headersearch/: HeaderSearchModule.kt  HeaderSearchPackage.kt
cpp/: react-native-header-search.cpp  react-native-header-search.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/headersearch/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/HeaderSearchExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/HeaderSearchExample.xcodeproj/: project.pbxproj
example/ios/HeaderSearchExample.xcodeproj/xcshareddata/xcschemes/: HeaderSearchExample.xcscheme
example/ios/HeaderSearchExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: HeaderSearch.h  HeaderSearch.mm
src/: index.tsx
src/component/HeaderSearch/: index.tsx  style.ts
